--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,8 @@ $display:flex;
 $space:space-between;
 $zcool:'ZCOOL KuaiLe', cursive;
 $allison:'Allison';
-$color-1:#1f1f1f;
-$color-2:#D64117;
+$color-1:hsl(0, 0%, 12%);
+$color-2:#1f1f1f;
 $around:space-around;
 $center:center;
 $margin:50px 0px;
