--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,5 +11,13 @@ $color-3:#30292D;
 $centering:0 auto;
 $padding:50px;
 $color-4:#aCA9CE;
-$colo-5:#7f6e83;
+$color-5:#7f6e83;
+$color-6:rgb(97, 156, 97);
+$bold:bold;
+$center:center;
+$size:25px;
+$size2:20px;
+$width:1200px;
+
+
 
