--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -71,7 +71,7 @@ footer {
   h2 {
     font-family: "Allison";
     text-align: $center;
-    font-size: $size;
+    font-size: 25px;
     background-color:$color-6;
     max-width: $width;
     margin: $centering;
@@ -92,7 +92,7 @@ footer {
       font-family: "Allison";
       a {
         font-weight: $bold;
-        font-size: $size2;
+        font-size: 20px;
         color: $color-2;
 
       }
