--- a/css/global.css
+++ b/css/global.css
@@ -56,6 +56,18 @@ a {
   font-display: swap;
 }
 
+@media (max-width: 800px) {
+  header .container {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.section .container .images {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 header {
   position: fixed;
   left: 0px;
